--- a/package.json
+++ b/package.json
@@ -19,8 +19,19 @@
     "@angular/platform-browser": "~10.0.9",
     "@angular/platform-browser-dynamic": "~10.0.9",
     "@angular/router": "~10.0.9",
+    "bcrypt": "^3.0.0",
+    "body-parser": "^1.17.2",
     "bootstrap": "^4.5.2",
+    "cors": "^2.8.4",
+    "express": "^4.16.3",
+    "express-session": "^1.17.1",
     "jquery": "^3.5.1",
+    "jsonwebtoken": "^7.4.2",
+    "mongodb": "^3.1.6",
+    "mongoose": "^5.2.15",
+    "nodemon": "^1.18.3",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
